--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 "short_name":"TodoApp",
 "description":"Tareas por hacer?, aplicacion para indicar tus tareas por hacer, recuerda no dejes para mñana lo que puedas hacer hoy ",
 "background_color":"#ff9400",
-"theme_color":"#ff6b00",
+"theme_color":"#bdd8f1",
 "orientation":"portrait",
 "display":"standalone",
 "start_url":"./?utm_source=web_app_manifest",
@@ -11,37 +11,37 @@
 "lang":"es-MX",
 "icons":[
 {
-"src":"./img/lista_512.png",
+"src":"./image/lista_512.png",
 "sizes":"512x512",
 "type":"image/png"
 },
 {
-"src":"./img/lista_256.png",
+"src":"./image/lista_256.png",
 "sizes":"256x256",
 "type":"image/png"
 },
 {
-"src":"./img/lista_128.png",
+"src":"./image/lista_128.png",
 "sizes":"128x128",
 "type":"image/png"
 },
 {
-"src":"./img/lista_64.png",
+"src":"./image/lista_64.png",
 "sizes":"64x64",
 "type":"image/png"
 },
 {
-"src":"./img/lista_32.png",
+"src":"./image/lista_32.png",
 "sizes":"32x32",
 "type":"image/png"
 },
 {
-"src":"./img/lista_24.png",
+"src":"./image/lista_24.png",
 "sizes":"24x24",
 "type":"image/png"
 },
 {
-"src":"./img/lista.png",
+"src":"./image/lista.png",
 "sizes":"16x16",
 "type":"image/png"
 }
