--- a/manifest.json
+++ b/manifest.json
@@ -11,37 +11,37 @@
 "lang":"es-MX",
 "icons":[
 {
-"src":"./image/lista_512.png",
+"src":"./images/lista_512.png",
 "sizes":"512x512",
 "type":"image/png"
 },
 {
-"src":"./image/lista_256.png",
+"src":"./images/lista_256.png",
 "sizes":"256x256",
 "type":"image/png"
 },
 {
-"src":"./image/lista_128.png",
+"src":"./images/lista_128.png",
 "sizes":"128x128",
 "type":"image/png"
 },
 {
-"src":"./image/lista_64.png",
+"src":"./images/lista_64.png",
 "sizes":"64x64",
 "type":"image/png"
 },
 {
-"src":"./image/lista_32.png",
+"src":"./images/lista_32.png",
 "sizes":"32x32",
 "type":"image/png"
 },
 {
-"src":"./image/lista_24.png",
+"src":"./images/lista_24.png",
 "sizes":"24x24",
 "type":"image/png"
 },
 {
-"src":"./image/lista.png",
+"src":"./images/lista.png",
 "sizes":"16x16",
 "type":"image/png"
 }
